--- a/app/views/home/_add_item_form.html.erb
+++ b/app/views/home/_add_item_form.html.erb
@@ -1,3 +1,4 @@
+<div id="new-item-form">
 <%= form_for(@item, :url=> { :controller=>"items", :action=>"create"}, :remote=>true) do |f| %>
 
   <% if @item.errors.any? %>
@@ -16,16 +17,16 @@
 
   <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title , :size=>40 %>
+    <%= f.text_field :title , :size=>40, :class=>'new-item-input' %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description, :cols=>30, :rows=>5 %>
+    <%= f.text_area :description, :cols=>30, :rows=>5, :class=>'new-item-input' %>
   </div>
 
   <div class="field">
     <%= f.label :effort_level %><br />
-   	<%= f.select :effort_level, options_for_select((0..10).to_a, 5) %>
+   	<%= f.select :effort_level, options_for_select((0..10).to_a, 5), :class=>'new-item-input' %>
   </div>
 
   <div class="field">
@@ -39,6 +40,7 @@
 	
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>'new-item-submit' %>
   </div>
 <% end %>
+</div>
