--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,4 +32,4 @@
 
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<%= link_to 'Return to Checklist', :controller => 'home' %>
