--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,15 +12,18 @@ body {
 p.description{}
 p.status{color:#ccc; font-style:italic}
 
-.header{float:left;width:100%; border-bottom:thin solid #f2f2f2}
-	.header-text{font-size:1.4em; font-wieght:bold}
+.header{float:left;width:100%; border-bottom:2px solid #fff}
+	.header-text{font-size:1.4em; font-wieght:bold; float:left}
+	.header-date{font-size:1em; font-style:italic; font-wieght:bold; }	
 	
 	.content {
-	  border-left:thin solid #CCCCCC;
+	 	border-left-color:#eee;
+	  border-left-style:solid;
+	  border-left-width:thin;
 	  float:left;
 	  margin-left:50px;
-	  padding:1%;
-	  width:90%;
+	  padding:0 0 0 10px;
+	  width:95%;
 	}
 
 .content>.main{float:left;width:80%}
@@ -48,7 +51,7 @@ label{float:left; font-weight:bold; font-size:1em; width:22%; text-align:left}
 input{padding:4px}
 select{padding:10px; margin:2px;}
 
-.top-menu{float:right; margin-right:50px}
+.top-menu{;float:right; width:90%; text-align:right}
 
 h1{}
 h2{}
@@ -60,7 +63,7 @@ p{padding:0px; margin:0px}
 
 .item-list-target{float:left; width:100%}
 .item-list{float:left; width:90%}
-.item{
+div.item{
 	  background-color:#01244C;
 	  border:2px solid #306198;
 	  color:#DDDDDD;
@@ -70,12 +73,12 @@ p{padding:0px; margin:0px}
 	  width:100%;
 	}
 	
-	.item>p.title{font-size:1.2em; font-weight:bold; border-bottom:2px solid #f2f2f2; width:100%; padding:4px; cursor:pointer}
+	.item>p.title{font-weight:bold; border-bottom:2px solid #f2f2f2; width:100%; padding:0px; cursor:pointer}
 	.item>p.details{float:left; width:100%}
 
 
-.action-list{float:right; width:220px }
-.action{float:right; margin-right:10px}
+.action-list{float:right; width:250px }
+.action{float:right; margin-right:3px}
 
 .toggle-details{
 	float:right;
