--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <body>
 	
 	<div class="header">
-		<span class="header-text">onDeck: what's on deck</span>
+		<span class="header-text">onDeck: what's on deck: </span>
 		<span class="header-date">
 			<% time = Time.new  %>
 			<%= time.strftime("%m-%d-%Y") %>
