--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -23,8 +23,8 @@ p, .item .details p.description{padding:0px; margin:0px}
 
 h2{padding:0px; margin:5px 0px 2px 0px; font-size:12pt; }
 
-.item > p.title{padding:0px; margin:0px}
-.item{
+div.item > p.title{padding:0px; margin:0px}
+div.item{
 		background-color:#fff;
 		color:#000; 
 		border:none;
@@ -33,6 +33,7 @@ h2{padding:0px; margin:5px 0px 2px 0px; font-size:12pt; }
 .item .details{display:block; margin-left:30px; font-size:10pt; line-height:12pt}
 	.item .status{display:none}
 
+	.links{display:none}
 .item-category{width:100%;	font-size:8pt;margin-left:10px}	
 
 .item-list {
